# llama-index-readers-wellmarked

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
llama_index/readers/wellmarked/: __init__.py  base.py
tests/: test_reader.py
